# slatedb-node

./: .envrc  .gitignore  .oxfmtrc.json  Cargo.toml  README.md  cspell.json  native.cjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.build.json  vitest.config.js
.cspell/: project-words.txt
.github/workflows/: ci.yml  publish.yml
nix/: flake.nix
spec/: are-the-types-wrong.spec.ts  slatedb-node.spec.ts
src/: index.ts  lib.rs
