[package]
name = "slatedb-node"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Node.js bindings for SlateDB via napi-rs"
repository = "https://github.com/gadget-inc/slatedb-node"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["clock"] }
figment = "0.10.19"
napi = { version = "3.5.0", default-features = false, features = ["napi8", "async", "tokio_rt", "serde-json"] }
napi-derive = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
slatedb = { git = "https://github.com/slatedb/slatedb.git", package = "slatedb", features = ["all"] }
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros", "sync"] }
ulid = "1.2.1"
uuid = { version = "1.18.1", features = ["v4", "serde"] }

[build-dependencies]
napi-build = "2.1.6"

[profile.release]
lto = true
strip = "symbols"
